# OSCloud

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md  install_dev_env.sh  install_sample_data.js  package-lock.json  package.json  run.md  tsconfig.json  vite.config.ts
Back/: Cargo.toml  Makefile.toml  build.rs  docker-compose.yaml  install_dev_env.sh  run.md
Back/locust/: launch_tests.py  requirements.txt
Back/migrations/2023-08-02-142135_create_user_table/: down.sql  up.sql
Back/migrations/2023-08-31-162333_tags/: down.sql  up.sql
Back/migrations/2023-08-31-194250_files/: down.sql  up.sql
Back/migrations/2024-03-19-172700_create_user_mounts_points/: down.sql  up.sql
Back/migrations/2024-03-29-091232_files_shares/: down.sql  up.sql
Back/src/: auth_middleware.rs  jwt_manager.rs  main.rs  network.rs
Back/src/cli/: commands.rs  files.rs  formating.rs  help.rs  mod.rs  tags.rs  tree.rs  users.rs
Back/src/database/: debug.rs  handlers.rs  json.rs  mod.rs  model.rs  schema.rs
Back/src/database/handlers/: file_shares.rs  mod.rs  tags.rs  user_advanced.rs  user_basis.rs  users.rs
Back/src/services/: delete.rs  file_upload.rs  files_gestion.rs  files_management.rs  files_share.rs  home.rs  json.rs  list_files.rs  login.rs  mod.rs  register.rs  upload.rs  user_gestion.rs  user_info.rs  user_management.rs
Back/src/utils/files/: clean_path.rs  file_info.rs  list_files.rs  mod.rs  user_mounts_points.rs
Back/src/utils/users/: mod.rs
Front/: README.md  package-lock.json  package.json
Front/src/: App.css  App.tsx  consts.ts
Front/src/AdminPanel/: AdminPanel.tsx
Front/src/Banner/: Banner.css  Banner.tsx
Front/src/CustomRouter/: CustomRouter.tsx
Front/src/FilesApp/: BackBlur.css  DragDropFile.css  DragDropFile.tsx  FileProperties.css  FileProperties.tsx  FileRightClick.css  FilesApp.css  FilesApp.tsx
Front/src/HomePage/: DesktopAppLayout.tsx  HomePage.css  HomePage.tsx  MobileAppLayout.tsx
Front/src/LoadingOverlay/: LoadingOverlay.tsx
Front/src/LoginPage/: LoginPage.css  LoginPage.tsx
Front/src/PhotosApp/: PhotosApp.tsx
database/: users.json
locust/: basic_cycle.py  clear_database.py  launch_tests.py  username_generator.py
public/: index.html
src/: App.css  App.tsx  UrlGestion.ts  WindowAnimation.css  auth_middleware.rs  consts.ts  index.ts  jwt_manager.rs  main.rs  main.tsx  network.rs  register.rs  users.rs
src/Banner/: Banner.css  Banner.tsx
src/CustomRouter/: CustomRouter.tsx
src/FilesApp/: BackBlur.css  BackBlur.tsx  FileProperties.tsx  FileRightClick.css  FileRightClick.tsx  FileRightClickActions.css  FileRightClickActions.tsx  FilesApp.css  FilesApp.tsx  SelectableFile.tsx
src/FilesPage/: FilesPage.css  FilesPage.tsx
src/HomePage/: DesktopAppLayout.tsx  HomePage.css  HomePage.tsx  MobileAppLayout.tsx
src/LoadingOverlay/: LoadingOverlay.css
src/LoginPage/: LoginPage.css  LoginPage.tsx
src/PhotosApp/: PhotosApp.tsx
src/PhotosPage/: PhotosPage.css  PhotosPage.tsx
src/ProtectorOverlay/: ProtectorOverlay.css
src/Window/: Window.css  Window.tsx
src/WindowAnimation/: WindowAnimation.css  WindowAnimation.tsx
src/appBar/: AppBar.css
src/cli/: commands.rs  formating.rs  help.rs  mod.rs  users.rs
src/database/: debug.rs  handlers.rs  json.rs  mod.rs  model.rs
src/dependencies/: checkUserAccessOnFile.ts  getUser.ts  listFiles.ts
src/middlewares/: authenticateToken.ts
src/services/: delete.rs  files.ts  home.rs  home.ts  json.rs  login.rs  login.ts  mod.rs  register.rs  upload.rs  userInfo.ts  user_info.rs
src/types/: Users.ts
(+7 files in other folders)
