[package]
name = "os-cloud-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.28"
actix-web = "4.3.1"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
env_logger = "0.10.0"
actix-cors = "0.6.4"