[package]
name = "os-cloud-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
embed-manifest = "1.4.0"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.28"
actix-web = "4.3.1"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
env_logger = "0.10.0"
actix-cors = "0.6.4"
bcrypt = "0.15.0"
directories = "5.0.1"

# Database access

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Cli and formating utils

tabled = "0.13.0"
colored = "2.0.4"
clearscreen = "2.0.1"
rustyline = "12.0.0"
