[package]
name = "os-cloud-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
embed-manifest = "1.4.0"

[profile.release]
debug = true

[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
chrono = "0.4.26"
env_logger = "0.10.0"
bcrypt = "0.15.0"
directories = "5.0.1"

axum = { version = "0.7.4", features = ["multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
# Database access

diesel = { version = "2.1.0", features = ["postgres", "r2d2", "uuid"] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }

# Cli and formating utils

tabled = { version = "0.14.0", optional = true }
colored = { version = "2.0.4", optional = true }
clearscreen = { version = "2.0.1", optional = true }
rustyline = { version = "12.0.0", optional = true }
tower-http = { version = "0.5.2", features = ["cors", "fs"] }
tower = { version = "0.4", features = ["util"] }

[features]
default = ["cli"]
cli = ["dep:tabled", "dep:colored", "dep:clearscreen", "dep:rustyline"]
